crates/scrap_parser/tests/snapshots/snapshots__function_with_params.snap
---
source: crates/scrap_parser/tests/snapshots.rs
expression: "$crate :: strip_salsa_ids(& format! (\"{:#?}\", parse(db, source)))"
---
Can(
    Can {
        id: NodeId {
            id: 0,
            file_hash: 16101345102062212073,
        },
        name: ModuleId {
            path: PathKey {
                path: Path {
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                    segments: [
                        PathSegment {
                            ident: Ident {
                                id: NodeId {
                                    id: -2,
                                    file_hash: 0,
                                },
                                name: Symbol("test"),
                                span: Span {
                                    start: 0,
                                    end: 4,
                                },
                            },
                            id: NodeId {
                                id: -2,
                                file_hash: 0,
                            },
                        },
                    ],
                },
            },
        },
        items: [
            Item {
                kind: Fn(
                    FnDef {
                        id: NodeId {
                            id: 23,
                            file_hash: 16101345102062212073,
                        },
                        ident: Ident {
                            id: NodeId {
                                id: 1,
                                file_hash: 16101345102062212073,
                            },
                            name: Symbol("add"),
                            span: Span {
                                start: 3,
                                end: 6,
                            },
                        },
                        generics: Generics {
                            params: [],
                        },
                        args: [
                            Param {
                                id: NodeId {
                                    id: 5,
                                    file_hash: 16101345102062212073,
                                },
                                ident: Ident {
                                    id: NodeId {
                                        id: 2,
                                        file_hash: 16101345102062212073,
                                    },
                                    name: Symbol("a"),
                                    span: Span {
                                        start: 7,
                                        end: 8,
                                    },
                                },
                                ty: Ty {
                                    id: NodeId {
                                        id: 4,
                                        file_hash: 16101345102062212073,
                                    },
                                    kind: Path(
                                        Path {
                                            span: Span {
                                                start: 10,
                                                end: 13,
                                            },
                                            segments: [
                                                PathSegment {
                                                    ident: Ident {
                                                        id: NodeId {
                                                            id: 3,
                                                            file_hash: 16101345102062212073,
                                                        },
                                                        name: Symbol("int"),
                                                        span: Span {
                                                            start: 10,
                                                            end: 13,
                                                        },
                                                    },
                                                    id: NodeId {
                                                        id: 3,
                                                        file_hash: 16101345102062212073,
                                                    },
                                                },
                                            ],
                                        },
                                    ),
                                    span: Span {
                                        start: 10,
                                        end: 13,
                                    },
                                },
                                pat: Pat {
                                    id: NodeId {
                                        id: 6,
                                        file_hash: 16101345102062212073,
                                    },
                                    kind: Missing,
                                    span: Span {
                                        start: 13,
                                        end: 14,
                                    },
                                },
                                span: Span {
                                    start: 7,
                                    end: 13,
                                },
                            },
                            Param {
                                id: NodeId {
                                    id: 10,
                                    file_hash: 16101345102062212073,
                                },
                                ident: Ident {
                                    id: NodeId {
                                        id: 7,
                                        file_hash: 16101345102062212073,
                                    },
                                    name: Symbol("b"),
                                    span: Span {
                                        start: 15,
                                        end: 16,
                                    },
                                },
                                ty: Ty {
                                    id: NodeId {
                                        id: 9,
                                        file_hash: 16101345102062212073,
                                    },
                                    kind: Path(
                                        Path {
                                            span: Span {
                                                start: 18,
                                                end: 21,
                                            },
                                            segments: [
                                                PathSegment {
                                                    ident: Ident {
                                                        id: NodeId {
                                                            id: 8,
                                                            file_hash: 16101345102062212073,
                                                        },
                                                        name: Symbol("int"),
                                                        span: Span {
                                                            start: 18,
                                                            end: 21,
                                                        },
                                                    },
                                                    id: NodeId {
                                                        id: 8,
                                                        file_hash: 16101345102062212073,
                                                    },
                                                },
                                            ],
                                        },
                                    ),
                                    span: Span {
                                        start: 18,
                                        end: 21,
                                    },
                                },
                                pat: Pat {
                                    id: NodeId {
                                        id: 11,
                                        file_hash: 16101345102062212073,
                                    },
                                    kind: Missing,
                                    span: Span {
                                        start: 21,
                                        end: 22,
                                    },
                                },
                                span: Span {
                                    start: 15,
                                    end: 21,
                                },
                            },
                        ],
                        ret_type: Some(
                            Ty {
                                id: NodeId {
                                    id: 13,
                                    file_hash: 16101345102062212073,
                                },
                                kind: Path(
                                    Path {
                                        span: Span {
                                            start: 26,
                                            end: 29,
                                        },
                                        segments: [
                                            PathSegment {
                                                ident: Ident {
                                                    id: NodeId {
                                                        id: 12,
                                                        file_hash: 16101345102062212073,
                                                    },
                                                    name: Symbol("int"),
                                                    span: Span {
                                                        start: 26,
                                                        end: 29,
                                                    },
                                                },
                                                id: NodeId {
                                                    id: 12,
                                                    file_hash: 16101345102062212073,
                                                },
                                            },
                                        ],
                                    },
                                ),
                                span: Span {
                                    start: 26,
                                    end: 29,
                                },
                            },
                        ),
                        body: Block {
                            stmts: [
                                Stmt {
                                    id: NodeId {
                                        id: 21,
                                        file_hash: 16101345102062212073,
                                    },
                                    kind: Expr(
                                        Expr {
                                            id: NodeId {
                                                id: 20,
                                                file_hash: 16101345102062212073,
                                            },
                                            kind: Binary(
                                                Spanned {
                                                    node: Add,
                                                    span: Span {
                                                        start: 38,
                                                        end: 39,
                                                    },
                                                },
                                                Expr {
                                                    id: NodeId {
                                                        id: 16,
                                                        file_hash: 16101345102062212073,
                                                    },
                                                    kind: Path(
                                                        Path {
                                                            span: Span {
                                                                start: 36,
                                                                end: 37,
                                                            },
                                                            segments: [
                                                                PathSegment {
                                                                    ident: Ident {
                                                                        id: NodeId {
                                                                            id: 14,
                                                                            file_hash: 16101345102062212073,
                                                                        },
                                                                        name: Symbol("a"),
                                                                        span: Span {
                                                                            start: 36,
                                                                            end: 37,
                                                                        },
                                                                    },
                                                                    id: NodeId {
                                                                        id: 15,
                                                                        file_hash: 16101345102062212073,
                                                                    },
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 36,
                                                        end: 39,
                                                    },
                                                },
                                                Expr {
                                                    id: NodeId {
                                                        id: 19,
                                                        file_hash: 16101345102062212073,
                                                    },
                                                    kind: Path(
                                                        Path {
                                                            span: Span {
                                                                start: 40,
                                                                end: 41,
                                                            },
                                                            segments: [
                                                                PathSegment {
                                                                    ident: Ident {
                                                                        id: NodeId {
                                                                            id: 17,
                                                                            file_hash: 16101345102062212073,
                                                                        },
                                                                        name: Symbol("b"),
                                                                        span: Span {
                                                                            start: 40,
                                                                            end: 41,
                                                                        },
                                                                    },
                                                                    id: NodeId {
                                                                        id: 18,
                                                                        file_hash: 16101345102062212073,
                                                                    },
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 40,
                                                        end: 43,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 36,
                                                end: 43,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 36,
                                        end: 43,
                                    },
                                },
                            ],
                            id: NodeId {
                                id: 22,
                                file_hash: 16101345102062212073,
                            },
                            span: Span {
                                start: 30,
                                end: 43,
                            },
                        },
                        span: Span {
                            start: 0,
                            end: 43,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 43,
                },
                id: NodeId {
                    id: 24,
                    file_hash: 16101345102062212073,
                },
                vis: Visibility {
                    kind: Inherited,
                    span: Span {
                        start: 0,
                        end: 2,
                    },
                },
            },
        ],
    },
)
